--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ buildscript {
 	}
 	dependencies {
 		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+		providedRuntime 'org.apache.tomcat.embed:tomcat-embed-jasper'
 	}
 }
 
